Complete model training

--- a/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
+++ b/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
@@ -38,10 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -51,10 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -81,19 +77,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s3://sagemaker-us-east-1-147440453791/plagiarism_data\n"
+     ]
+    }
+   ],
    "source": [
     "# should be the name of directory you created to save your features data\n",
-    "data_dir = None\n",
+    "data_dir = \"plagiarism_data\"\n",
     "\n",
     "# set prefix, a descriptive name for a directory  \n",
-    "prefix = None\n",
+    "prefix = data_dir\n",
     "\n",
-    "# upload all data to S3\n"
+    "# upload all data to S3\n",
+    "input_data = sagemaker_session.upload_data(path=data_dir, bucket=bucket, key_prefix=prefix)\n",
+    "print(input_data)"
    ]
   },
   {
@@ -107,11 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "plagiarism_data/test.csv\n",
+      "plagiarism_data/train.csv\n",
+      "Test passed!\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -170,11 +182,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36m__future__\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m print_function\r\n",
+      "\r\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36margparse\u001b[39;49;00m\r\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mos\u001b[39;49;00m\r\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mpandas\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36mpd\u001b[39;49;00m\r\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mjoblib\u001b[39;49;00m\r\n",
+      "\r\n",
+      "\u001b[37m## TODO: Import any additional libraries you need to define a model\u001b[39;49;00m\r\n",
+      "\u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36msklearn\u001b[39;49;00m\u001b[04m\u001b[36m.\u001b[39;49;00m\u001b[04m\u001b[36mensemble\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m AdaBoostClassifier\r\n",
+      "\r\n",
+      "\u001b[37m# Provided model load function\u001b[39;49;00m\r\n",
+      "\u001b[34mdef\u001b[39;49;00m \u001b[32mmodel_fn\u001b[39;49;00m(model_dir):\r\n",
+      "    \u001b[33m\"\"\"Load model from the model_dir. This is the same model that is saved\u001b[39;49;00m\r\n",
+      "\u001b[33m    in the main if statement.\u001b[39;49;00m\r\n",
+      "\u001b[33m    \"\"\"\u001b[39;49;00m\r\n",
+      "    \u001b[36mprint\u001b[39;49;00m(\u001b[33m\"\u001b[39;49;00m\u001b[33mLoading model.\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\r\n",
+      "    \r\n",
+      "    \u001b[37m# load using joblib\u001b[39;49;00m\r\n",
+      "    model = joblib.load(os.path.join(model_dir, \u001b[33m\"\u001b[39;49;00m\u001b[33mmodel.joblib\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m))\r\n",
+      "    \u001b[36mprint\u001b[39;49;00m(\u001b[33m\"\u001b[39;49;00m\u001b[33mDone loading model.\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\r\n",
+      "    \r\n",
+      "    \u001b[34mreturn\u001b[39;49;00m model\r\n",
+      "\r\n",
+      "\r\n",
+      "\u001b[37m## TODO: Complete the main code\u001b[39;49;00m\r\n",
+      "\u001b[34mif\u001b[39;49;00m \u001b[31m__name__\u001b[39;49;00m == \u001b[33m'\u001b[39;49;00m\u001b[33m__main__\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m:\r\n",
+      "    \r\n",
+      "    \u001b[37m# All of the model parameters and training parameters are sent as arguments\u001b[39;49;00m\r\n",
+      "    \u001b[37m# when this script is executed, during a training job\u001b[39;49;00m\r\n",
+      "    \r\n",
+      "    \u001b[37m# Here we set up an argument parser to easily access the parameters\u001b[39;49;00m\r\n",
+      "    parser = argparse.ArgumentParser()\r\n",
+      "\r\n",
+      "    \u001b[37m# SageMaker parameters, like the directories for training data and saving models; set automatically\u001b[39;49;00m\r\n",
+      "    \u001b[37m# Do not need to change\u001b[39;49;00m\r\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--output-data-dir\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=os.environ[\u001b[33m'\u001b[39;49;00m\u001b[33mSM_OUTPUT_DATA_DIR\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m])\r\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--model-dir\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=os.environ[\u001b[33m'\u001b[39;49;00m\u001b[33mSM_MODEL_DIR\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m])\r\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--data-dir\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=os.environ[\u001b[33m'\u001b[39;49;00m\u001b[33mSM_CHANNEL_TRAIN\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m])\r\n",
+      "    \r\n",
+      "    \u001b[37m## TODO: Add any additional arguments that you will need to pass into your model\u001b[39;49;00m\r\n",
+      "    \r\n",
+      "    \u001b[37m# args holds all passed-in arguments\u001b[39;49;00m\r\n",
+      "    args = parser.parse_args()\r\n",
+      "\r\n",
+      "    \u001b[37m# Read in csv training file\u001b[39;49;00m\r\n",
+      "    training_dir = args.data_dir\r\n",
+      "    train_data = pd.read_csv(os.path.join(training_dir, \u001b[33m\"\u001b[39;49;00m\u001b[33mtrain.csv\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m), header=\u001b[34mNone\u001b[39;49;00m, names=\u001b[34mNone\u001b[39;49;00m)\r\n",
+      "\r\n",
+      "    \u001b[37m# Labels are in the first column\u001b[39;49;00m\r\n",
+      "    train_y = train_data.iloc[:,\u001b[34m0\u001b[39;49;00m]\r\n",
+      "    train_x = train_data.iloc[:,\u001b[34m1\u001b[39;49;00m:]\r\n",
+      "\r\n",
+      "    \u001b[37m## TODO: Define a model\u001b[39;49;00m\r\n",
+      "    model = AdaBoostClassifier(n_estimators=\u001b[34m100\u001b[39;49;00m, random_state=\u001b[34m0\u001b[39;49;00m)\r\n",
+      "    \r\n",
+      "    \u001b[37m## TODO: Train the model\u001b[39;49;00m\r\n",
+      "    model.fit(train_x, train_y)\r\n",
+      "\r\n",
+      "    \u001b[37m# Save the trained model\u001b[39;49;00m\r\n",
+      "    joblib.dump(model, os.path.join(args.model_dir, \u001b[33m\"\u001b[39;49;00m\u001b[33mmodel.joblib\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m))\r\n"
+     ]
+    }
+   ],
    "source": [
     "# directory can be changed to: source_sklearn or source_pytorch\n",
     "!pygmentize source_sklearn/train.py"
@@ -230,14 +307,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from sagemaker.sklearn.estimator import SKLearn\n",
     "\n",
-    "# your import and estimator code, here\n"
+    "# your import and estimator code, here\n",
+    "estimator = SKLearn(\n",
+    "    entry_point='train.py',\n",
+    "    source_dir='source_sklearn',\n",
+    "    role=role,\n",
+    "    framework_version='0.23-1',\n",
+    "    train_instance_count=1,\n",
+    "    train_instance_type='ml.c4.xlarge',\n",
+    "    output_path='s3://{}/{}'.format(bucket, prefix),\n",
+    "    sagemaker_session=sagemaker_session,\n",
+    ")"
    ]
   },
   {
@@ -252,15 +338,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'s3_input' class will be renamed to 'TrainingInput' in SageMaker Python SDK v2.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-10-14 15:35:36 Starting - Starting the training job...\n",
+      "2020-10-14 15:35:38 Starting - Launching requested ML instances......\n",
+      "2020-10-14 15:36:43 Starting - Preparing the instances for training...\n",
+      "2020-10-14 15:37:36 Downloading - Downloading input data.."
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
     "# Train your estimator on S3 training data\n",
-    "\n"
+    "estimator.fit({'train': input_data})"
    ]
   },
   {
@@ -280,20 +382,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parameter image will be renamed to image_uri in SageMaker Python SDK v2.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------!CPU times: user 392 ms, sys: 24.6 ms, total: 417 ms\n",
+      "Wall time: 10min 33s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
-    "# uncomment, if needed\n",
-    "# from sagemaker.pytorch import PyTorchModel\n",
-    "\n",
-    "\n",
     "# deploy your model to create a predictor\n",
-    "predictor = None\n"
+    "linear_predictor = estimator.deploy(initial_instance_count=1, instance_type='ml.t2.medium')"
    ]
   },
   {
@@ -310,10 +422,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -342,15 +452,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# First: generate predicted, class labels\n",
-    "test_y_preds = None\n",
-    "\n",
+    "test_y_preds = linear_predictor.predict(test_x)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -362,17 +477,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "\n",
+      "Predicted class labels: \n",
+      "[1 1 1 1 1 1 0 0 0 0 0 0 1 1 1 1 1 1 0 1 0 1 1 0 0]\n",
+      "\n",
+      "True class labels: \n",
+      "[1 1 1 1 1 1 0 0 0 0 0 0 1 1 1 1 1 1 0 1 0 1 1 0 0]\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "# Second: calculate the test accuracy\n",
-    "accuracy = None\n",
+    "accuracy = accuracy_score(test_y, test_y_preds)\n",
     "\n",
     "print(accuracy)\n",
-    "\n",
     "\n",
     "## print out the array of predicted and true labels, if you want\n",
     "print('\\nPredicted class labels: ')\n",
@@ -392,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Answer**: \n"
+    "Seems to be none, since the training and tests sets are so closely related.\n"
    ]
   },
   {
@@ -406,8 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Answer**:\n",
-    "\n"
+    "I like how AdaBoost uses multiple copies of a classifier, then adjusts them to focus on more difficult samples by increasing weights on incorrect predictions and decreasing them for correct ones. This forces concentration on weak samples over time."
    ]
   },
   {
@@ -422,14 +549,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# uncomment and fill in the line below!\n",
-    "# <name_of_deployed_predictor>.delete_endpoint()\n"
+    "linear_predictor.delete_endpoint()"
    ]
   },
   {
@@ -443,16 +567,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'ResponseMetadata': {'RequestId': 'DE8565192C70E270',\n",
+       "   'HostId': 'X6qA6ph8HYQLbbVMd5wYmSxmAmZctVyrvVLgOGU2Es6heg9A92/4xOJreahbN9+4RPiBovA8Xbo=',\n",
+       "   'HTTPStatusCode': 200,\n",
+       "   'HTTPHeaders': {'x-amz-id-2': 'X6qA6ph8HYQLbbVMd5wYmSxmAmZctVyrvVLgOGU2Es6heg9A92/4xOJreahbN9+4RPiBovA8Xbo=',\n",
+       "    'x-amz-request-id': 'DE8565192C70E270',\n",
+       "    'date': 'Wed, 14 Oct 2020 15:26:39 GMT',\n",
+       "    'content-type': 'application/xml',\n",
+       "    'transfer-encoding': 'chunked',\n",
+       "    'server': 'AmazonS3',\n",
+       "    'connection': 'close'},\n",
+       "   'RetryAttempts': 0},\n",
+       "  'Deleted': [{'Key': 'sagemaker-scikit-learn-2020-10-14-03-58-29-944/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-03-20-33-609/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-36-42-846/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-07-56-755/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-13-50-07-128/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-55-20-807/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-13-36-46-407/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-59-44-851/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-30-27-489/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-13-45-17-410/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-04-29-00-896/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-04-44-58-119/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-03-51-29-326/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker/moon-data/sagemaker-pytorch-2020-10-01-18-13-54-518/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'energy-consuption/test/test.json'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-03-09-689/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker/moon-data/sagemaker-pytorch-2020-10-01-18-13-54-518/output/model.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-03-41-09-851/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-pytorch-2020-10-01-18-13-54-518/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-pytorch-2020-10-01-18-19-43-091/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker/moon-data/train.csv'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-04-50-48-142/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-14-37-29-773/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-14-32-33-540/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-14-37-29-773/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-14-37-29-773/output/model.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-04-09-26-388/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/train.csv'},\n",
+       "   {'Key': 'plagiarism_data/test.csv'},\n",
+       "   {'Key': 'energy-consuption/train/train.json'}]}]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# deleting bucket, uncomment lines below\n",
-    "\n",
-    "# bucket_to_delete = boto3.resource('s3').Bucket(bucket)\n",
-    "# bucket_to_delete.objects.all().delete()"
+    "bucket_to_delete = boto3.resource('s3').Bucket(bucket)\n",
+    "bucket_to_delete.objects.all().delete()"
    ]
   },
   {
@@ -484,9 +655,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "conda_amazonei_mxnet_p36",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "conda_amazonei_mxnet_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -498,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
