--- a/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
+++ b/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
       "    train_x = train_data.iloc[:,\u001b[34m1\u001b[39;49;00m:]\r\n",
       "\r\n",
       "    \u001b[37m## TODO: Define a model\u001b[39;49;00m\r\n",
-      "    model = AdaBoostClassifier(n_estimators=\u001b[34m100\u001b[39;49;00m, random_state=\u001b[34m0\u001b[39;49;00m)\r\n",
+      "    model = AdaBoostClassifier(n_estimators=\u001b[34m70\u001b[39;49;00m)\r\n",
       "    \r\n",
       "    \u001b[37m## TODO: Train the model\u001b[39;49;00m\r\n",
       "    model.fit(train_x, train_y)\r\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -351,10 +351,104 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-10-14 15:35:36 Starting - Starting the training job...\n",
-      "2020-10-14 15:35:38 Starting - Launching requested ML instances......\n",
-      "2020-10-14 15:36:43 Starting - Preparing the instances for training...\n",
-      "2020-10-14 15:37:36 Downloading - Downloading input data.."
+      "2020-10-14 20:32:37 Starting - Starting the training job...\n",
+      "2020-10-14 20:32:41 Starting - Launching requested ML instances......\n",
+      "2020-10-14 20:33:46 Starting - Preparing the instances for training......\n",
+      "2020-10-14 20:34:49 Downloading - Downloading input data...\n",
+      "2020-10-14 20:35:23 Training - Downloading the training image...\n",
+      "2020-10-14 20:36:08 Uploading - Uploading generated training model\u001b[34m2020-10-14 20:35:58,415 sagemaker-training-toolkit INFO     Imported framework sagemaker_sklearn_container.training\u001b[0m\n",
+      "\u001b[34m2020-10-14 20:35:58,422 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2020-10-14 20:35:58,441 sagemaker_sklearn_container.training INFO     Invoking user training script.\u001b[0m\n",
+      "\u001b[34m2020-10-14 20:35:58,794 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2020-10-14 20:36:01,822 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2020-10-14 20:36:01,833 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2020-10-14 20:36:01,844 sagemaker-training-toolkit INFO     Invoking user script\n",
+      "\u001b[0m\n",
+      "\u001b[34mTraining Env:\n",
+      "\u001b[0m\n",
+      "\u001b[34m{\n",
+      "    \"additional_framework_parameters\": {},\n",
+      "    \"channel_input_dirs\": {\n",
+      "        \"train\": \"/opt/ml/input/data/train\"\n",
+      "    },\n",
+      "    \"current_host\": \"algo-1\",\n",
+      "    \"framework_module\": \"sagemaker_sklearn_container.training:main\",\n",
+      "    \"hosts\": [\n",
+      "        \"algo-1\"\n",
+      "    ],\n",
+      "    \"hyperparameters\": {},\n",
+      "    \"input_config_dir\": \"/opt/ml/input/config\",\n",
+      "    \"input_data_config\": {\n",
+      "        \"train\": {\n",
+      "            \"TrainingInputMode\": \"File\",\n",
+      "            \"S3DistributionType\": \"FullyReplicated\",\n",
+      "            \"RecordWrapperType\": \"None\"\n",
+      "        }\n",
+      "    },\n",
+      "    \"input_dir\": \"/opt/ml/input\",\n",
+      "    \"is_master\": true,\n",
+      "    \"job_name\": \"sagemaker-scikit-learn-2020-10-14-20-32-37-472\",\n",
+      "    \"log_level\": 20,\n",
+      "    \"master_hostname\": \"algo-1\",\n",
+      "    \"model_dir\": \"/opt/ml/model\",\n",
+      "    \"module_dir\": \"s3://sagemaker-us-east-1-147440453791/sagemaker-scikit-learn-2020-10-14-20-32-37-472/source/sourcedir.tar.gz\",\n",
+      "    \"module_name\": \"train\",\n",
+      "    \"network_interface_name\": \"eth0\",\n",
+      "    \"num_cpus\": 4,\n",
+      "    \"num_gpus\": 0,\n",
+      "    \"output_data_dir\": \"/opt/ml/output/data\",\n",
+      "    \"output_dir\": \"/opt/ml/output\",\n",
+      "    \"output_intermediate_dir\": \"/opt/ml/output/intermediate\",\n",
+      "    \"resource_config\": {\n",
+      "        \"current_host\": \"algo-1\",\n",
+      "        \"hosts\": [\n",
+      "            \"algo-1\"\n",
+      "        ],\n",
+      "        \"network_interface_name\": \"eth0\"\n",
+      "    },\n",
+      "    \"user_entry_point\": \"train.py\"\u001b[0m\n",
+      "\u001b[34m}\n",
+      "\u001b[0m\n",
+      "\u001b[34mEnvironment variables:\n",
+      "\u001b[0m\n",
+      "\u001b[34mSM_HOSTS=[\"algo-1\"]\u001b[0m\n",
+      "\u001b[34mSM_NETWORK_INTERFACE_NAME=eth0\u001b[0m\n",
+      "\u001b[34mSM_HPS={}\u001b[0m\n",
+      "\u001b[34mSM_USER_ENTRY_POINT=train.py\u001b[0m\n",
+      "\u001b[34mSM_FRAMEWORK_PARAMS={}\u001b[0m\n",
+      "\u001b[34mSM_RESOURCE_CONFIG={\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"}\u001b[0m\n",
+      "\u001b[34mSM_INPUT_DATA_CONFIG={\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}}\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_DATA_DIR=/opt/ml/output/data\u001b[0m\n",
+      "\u001b[34mSM_CHANNELS=[\"train\"]\u001b[0m\n",
+      "\u001b[34mSM_CURRENT_HOST=algo-1\u001b[0m\n",
+      "\u001b[34mSM_MODULE_NAME=train\u001b[0m\n",
+      "\u001b[34mSM_LOG_LEVEL=20\u001b[0m\n",
+      "\u001b[34mSM_FRAMEWORK_MODULE=sagemaker_sklearn_container.training:main\u001b[0m\n",
+      "\u001b[34mSM_INPUT_DIR=/opt/ml/input\u001b[0m\n",
+      "\u001b[34mSM_INPUT_CONFIG_DIR=/opt/ml/input/config\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_DIR=/opt/ml/output\u001b[0m\n",
+      "\u001b[34mSM_NUM_CPUS=4\u001b[0m\n",
+      "\u001b[34mSM_NUM_GPUS=0\u001b[0m\n",
+      "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-1-147440453791/sagemaker-scikit-learn-2020-10-14-20-32-37-472/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_sklearn_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-scikit-learn-2020-10-14-20-32-37-472\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-1-147440453791/sagemaker-scikit-learn-2020-10-14-20-32-37-472/source/sourcedir.tar.gz\",\"module_name\":\"train\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"train.py\"}\u001b[0m\n",
+      "\u001b[34mSM_USER_ARGS=[]\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
+      "\u001b[34mSM_CHANNEL_TRAIN=/opt/ml/input/data/train\u001b[0m\n",
+      "\u001b[34mPYTHONPATH=/opt/ml/code:/miniconda3/bin:/miniconda3/lib/python37.zip:/miniconda3/lib/python3.7:/miniconda3/lib/python3.7/lib-dynload:/miniconda3/lib/python3.7/site-packages\n",
+      "\u001b[0m\n",
+      "\u001b[34mInvoking script with the following command:\n",
+      "\u001b[0m\n",
+      "\u001b[34m/miniconda3/bin/python train.py\n",
+      "\n",
+      "\u001b[0m\n",
+      "\u001b[34m2020-10-14 20:36:04,027 sagemaker-training-toolkit INFO     Reporting training SUCCESS\u001b[0m\n",
+      "\n",
+      "2020-10-14 20:36:15 Completed - Training job completed\n",
+      "Training seconds: 86\n",
+      "Billable seconds: 86\n",
+      "CPU times: user 574 ms, sys: 31.6 ms, total: 605 ms\n",
+      "Wall time: 4min 12s\n"
      ]
     }
    ],
@@ -382,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -396,8 +490,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------------------!CPU times: user 392 ms, sys: 24.6 ms, total: 417 ms\n",
-      "Wall time: 10min 33s\n"
+      "-------------------!CPU times: user 363 ms, sys: 17.5 ms, total: 380 ms\n",
+      "Wall time: 9min 33s\n"
      ]
     }
    ],
@@ -422,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -477,17 +571,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n",
+      "0.92\n",
       "\n",
       "Predicted class labels: \n",
-      "[1 1 1 1 1 1 0 0 0 0 0 0 1 1 1 1 1 1 0 1 0 1 1 0 0]\n",
+      "[1 1 1 1 1 1 0 0 1 0 0 0 1 1 1 1 1 1 0 1 0 1 1 0 1]\n",
       "\n",
       "True class labels: \n",
       "[1 1 1 1 1 1 0 0 0 0 0 0 1 1 1 1 1 1 0 1 0 1 1 0 0]\n"
@@ -520,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seems to be none, since the training and tests sets are so closely related.\n"
+    "Less than 10 percent, and likely because the data sets are so similar.\n"
    ]
   },
   {
@@ -549,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,56 +661,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'ResponseMetadata': {'RequestId': 'DE8565192C70E270',\n",
-       "   'HostId': 'X6qA6ph8HYQLbbVMd5wYmSxmAmZctVyrvVLgOGU2Es6heg9A92/4xOJreahbN9+4RPiBovA8Xbo=',\n",
+       "[{'ResponseMetadata': {'RequestId': '6FE844F857921089',\n",
+       "   'HostId': '8sXAtlljjj6X1NsEUqs1/Pj5GBWDQYwnarfh9FqR7b7t4nNAbKt5Jc76rdxebvnvf0TFgM0iKSQ=',\n",
        "   'HTTPStatusCode': 200,\n",
-       "   'HTTPHeaders': {'x-amz-id-2': 'X6qA6ph8HYQLbbVMd5wYmSxmAmZctVyrvVLgOGU2Es6heg9A92/4xOJreahbN9+4RPiBovA8Xbo=',\n",
-       "    'x-amz-request-id': 'DE8565192C70E270',\n",
-       "    'date': 'Wed, 14 Oct 2020 15:26:39 GMT',\n",
+       "   'HTTPHeaders': {'x-amz-id-2': '8sXAtlljjj6X1NsEUqs1/Pj5GBWDQYwnarfh9FqR7b7t4nNAbKt5Jc76rdxebvnvf0TFgM0iKSQ=',\n",
+       "    'x-amz-request-id': '6FE844F857921089',\n",
+       "    'date': 'Wed, 14 Oct 2020 20:28:20 GMT',\n",
        "    'content-type': 'application/xml',\n",
        "    'transfer-encoding': 'chunked',\n",
        "    'server': 'AmazonS3',\n",
        "    'connection': 'close'},\n",
        "   'RetryAttempts': 0},\n",
-       "  'Deleted': [{'Key': 'sagemaker-scikit-learn-2020-10-14-03-58-29-944/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-03-20-33-609/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-36-42-846/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-07-56-755/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-13-50-07-128/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-55-20-807/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-13-36-46-407/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-59-44-851/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-30-27-489/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-13-45-17-410/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-04-29-00-896/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-04-44-58-119/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-03-51-29-326/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker/moon-data/sagemaker-pytorch-2020-10-01-18-13-54-518/debug-output/training_job_end.ts'},\n",
-       "   {'Key': 'energy-consuption/test/test.json'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-05-03-09-689/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker/moon-data/sagemaker-pytorch-2020-10-01-18-13-54-518/output/model.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-03-41-09-851/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-pytorch-2020-10-01-18-13-54-518/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-pytorch-2020-10-01-18-19-43-091/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker/moon-data/train.csv'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-04-50-48-142/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-14-37-29-773/debug-output/training_job_end.ts'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-14-32-33-540/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-14-37-29-773/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-14-37-29-773/output/model.tar.gz'},\n",
-       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-04-09-26-388/source/sourcedir.tar.gz'},\n",
-       "   {'Key': 'plagiarism_data/train.csv'},\n",
+       "  'Deleted': [{'Key': 'sagemaker-scikit-learn-2020-10-14-15-35-35-797/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-19-28-05-132/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-18-04-43-588/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-17-27-31-924/output/model.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-16-53-02-524/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-20-09-59-795/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-18-04-43-588/output/model.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-19-28-05-132/output/model.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-18-04-43-588/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-20-09-59-795/output/model.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-15-35-35-797/output/model.tar.gz'},\n",
        "   {'Key': 'plagiarism_data/test.csv'},\n",
-       "   {'Key': 'energy-consuption/train/train.json'}]}]"
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-16-53-02-524/output/model.tar.gz'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-17-27-31-924/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-19-28-05-132/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-15-35-35-797/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-16-53-02-524/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-19-45-03-363/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-17-06-44-823/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-19-45-03-363/output/model.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/train.csv'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-19-45-03-363/source/sourcedir.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-17-27-31-924/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-17-06-44-823/output/model.tar.gz'},\n",
+       "   {'Key': 'plagiarism_data/sagemaker-scikit-learn-2020-10-14-17-06-44-823/debug-output/training_job_end.ts'},\n",
+       "   {'Key': 'sagemaker-scikit-learn-2020-10-14-20-09-59-795/source/sourcedir.tar.gz'}]}]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
